--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Bank
 server.port=8085
-spring.datasource.url=jdbc:postgresql://localhost:5432/user_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/account_db
 spring.datasource.username=postgres
 spring.datasource.password=1
 spring.jpa.hibernate.ddl-auto=none
